DeploymentStaging/deployPackage/objects/Work_Order_Activity_Search_Criteria__c.object
<CustomObject>
    <description>Activity Search criteria filter used in VTT_ActivityListView so certain users can save and reuse commonly used search criteria.</description>
    <fields>
        <fullName>Assigned_Name__c</fullName>
        <label>Assigned Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_String__c</fullName>
        <label>Filter String</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Search_Criteria_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Search Criteria Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who saved the Search Criteria.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Order_Activity_Search_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Work Order Activity Search Criteria</label>
    <nameField>
        <displayFormat>ASC-{000000}</displayFormat>
        <label>Activity Search Criteria Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Activity Search Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>